SAG experiment on trival uniform random set

--- a/QuantEst/sgd_est_experiment/Experiment_final_change_stepsize.ipynb
+++ b/QuantEst/sgd_est_experiment/Experiment_final_change_stepsize.ipynb
@@ -231,17 +231,7 @@
     "        return 2/math.sqrt(k)* np.ones(length)\n",
     "    elif stepsize=='0.002_div_sqrt_k':\n",
     "        return 0.002/math.sqrt(k) * np.ones(length)\n",
-    "    raise Exception('stepsize parameter is wrong')\n",
-    "    \n",
-    "    \n",
-    "# def set_stepsize(k, stepsize):\n",
-    "#     if stepsize=='const':\n",
-    "#         return 1\n",
-    "#     elif stepsize=='2_div_sqrt_k':\n",
-    "#         return 2/math.sqrt(k)\n",
-    "#     elif stepsize=='0.002_div_sqrt_k':\n",
-    "#         return 0.002/math.sqrt(k)\n",
-    "#     raise Exception('stepsize parameter is wrong')"
+    "    raise Exception('stepsize parameter is wrong')"
    ]
   },
   {
@@ -278,19 +268,6 @@
     "        proc[k] = q_arr\n",
     "#     print (alpha_arr)\n",
     "    return proc.T\n",
-    "   \n",
-    "# def set_stepsize(idx, step_size, len_arr):\n",
-    "#     return np.ones(len_arr)*10\n",
-    "\n",
-    "\n",
-    "# def update_stepsize(alpha_arr, diff, step_size, update_size):\n",
-    "#     update_var = np.ones(len(diff))\n",
-    "#     for i, a in enumerate(alpha_arr):\n",
-    "#         d = diff[i]\n",
-    "#         if a * update_size * 0.35 < abs(d): update_var[i] = 2\n",
-    "#         elif a * update_size * 0.05 > abs(d): update_var[i] = 1/2\n",
-    "# #     print ('step_size', update_var)\n",
-    "#     return update_var\n",
     "\n",
     "def update_stepsize(alpha_arr, diff, step_size, update_size):\n",
     "    update_var = np.ones(len(diff))\n",
@@ -315,44 +292,6 @@
     "    elif x < q and rdn > tau:\n",
     "        q -= 1\n",
     "    return q"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def get_procs(dataset, step_size, tau_lst):\n",
-    "#     if len(dataset.shape)!= 1: \n",
-    "#         raise Exception('Dataset for get_procs() of wrong shape:' + str(dataset.shape)+ ', should be 1d array')\n",
-    "        \n",
-    "#     procs = np.zeros((len(tau_lst), dataset.shape[0]))\n",
-    "#     for idx, tau in enumerate(tau_lst):\n",
-    "#         q = 0\n",
-    "#         q_sgd_proc = procs[idx]\n",
-    "#         # change stepsize\n",
-    "#         if step_size != 'frugal':\n",
-    "#             for k, x in enumerate(dataset):\n",
-    "# #                 if idx==1: print (k, ':', q)\n",
-    "#                 alpha = set_stepsize(k+1, step_size)\n",
-    "#                 if x > q:\n",
-    "#                     q = q + alpha*tau\n",
-    "#                 else:\n",
-    "#                     q = q - alpha*(1-tau)\n",
-    "#                 q_sgd_proc[k] = q\n",
-    "        \n",
-    "#         # frugal\n",
-    "#         else:\n",
-    "#             rdn_lst = np.random.uniform(0,1, dataset.shape[0])\n",
-    "#             for k, x in enumerate(dataset):\n",
-    "#                 rdn = rdn_lst[k]\n",
-    "#                 if x > q and rdn > 1-tau:\n",
-    "#                     q += 1\n",
-    "#                 elif x < q and rdn > tau:\n",
-    "#                     q -= 1\n",
-    "#                 q_sgd_proc[k] = q\n",
-    "#     return procs"
    ]
   },
   {
@@ -386,28 +325,6 @@
     "            procs[idx] = get_procs(dt, step_size, tau_lst)\n",
     "            res[idx] = get_res(procs[idx])\n",
     "    return res, procs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# dataset = get_dataset('gau_1', 1000, g_test=True) * 50 - 200\n",
-    "# print(dataset.shape)\n",
-    "\n",
-    "# # proc1 = get_procs(dataset, 'const', tau_vals)\n",
-    "# ## res1 = get_res(proc1)\n",
-    "# # proc2 = get_procs(dataset, 'frugal', tau_vals)\n",
-    "# # plt.plot(proc1.T)ad\n",
-    "# # plt.plot(proc2.T)\n",
-    "# # plt.show()\n",
-    "\n",
-    "\n",
-    "# res, proc = get_q_ests(dataset, 'const', tau_vals)\n",
-    "# print(res)\n",
-    "# print(proc)"
    ]
   },
   {
