--- a/QuantEst/thesis/main.tex
+++ b/QuantEst/thesis/main.tex
@@ -97,7 +97,8 @@
 %	THESIS CONTENT - CHAPTERS
 %----------------------------------------------------------------------------------------
 
-\include{Chapters/literature_review} % Chapter 1
+% \include{Chapters/literature_review} % Chapter 1
+\include{Chapters/SAG}
 % \include{Chapters/SGD}
 % \include{Chapters/algorithm_equivalence}
 % \include{Chapters/Simultaneous_SGD}
