SAG explanation drat done

--- a/QuantEst/thesis/Bibliography.bib
+++ b/QuantEst/thesis/Bibliography.bib
@@ -45,6 +45,20 @@
   language = {en}
 }
 
+@article{bagulSMOOTHTRANSCENDENTALAPPROXIMATION2017,
+  title = {A {{SMOOTH TRANSCENDENTAL APPROXIMATION TO}} |x|},
+  author = {Bagul, Yogesh J. J},
+  year = {2017},
+  month = aug,
+  volume = {Vol. 11},
+  pages = {213--217},
+  abstract = {In this note we present a new simple and smooth transcendental approximation to f (x) = |x|, with sufficient accuracy. The proposed formula gives better approximation than x 2 + \textmu{} 2 in terms of accuracy.},
+  file = {/Users/sue/Zotero/storage/NRJSA2ZE/Bagul - 2017 - A SMOOTH TRANSCENDENTAL APPROXIMATION TO x.pdf},
+  journal = {International J. of Math. Sci. \& Engg. Appls. (IJMSEA)},
+  keywords = {Absolute value function,Hyperbolic function,Smooth transcendental approximation},
+  number = {II}
+}
+
 @article{ben-haimStreamingParallelDecision2010,
   title = {A {{Streaming Parallel Decision Tree Algorithm}}},
   author = {{Ben-Haim}, Yael and {Tom-Tov}, Elad},
@@ -657,6 +671,21 @@
   abstract = {Addressing the will to give a more complete picture than an average relationship provided by standard regression, a novel framework for estimating and predicting simultaneously several conditional quantiles is introduced. The proposed methodology leverages kernel-based multi-task learning to curb the embarrassing phenomenon of quantile crossing, with a one-step estimation procedure and no post-processing. Moreover, this framework comes along with theoretical guarantees and an efficient coordinate descent learning algorithm. Numerical experiments on benchmark and real datasets highlight the enhancements of our approach regarding the prediction error, the crossing occurrences and the training time.},
   file = {/Users/sue/Zotero/storage/SITM7K4L/Sangnier and Fercoq - Joint quantile regression in vector-valued RKHSs.pdf},
   language = {en}
+}
+
+@article{schmidtMinimizingFiniteSums2016,
+  title = {Minimizing {{Finite Sums}} with the {{Stochastic Average Gradient}}},
+  author = {Schmidt, Mark and Roux, Nicolas Le and Bach, Francis},
+  year = {2016},
+  month = may,
+  abstract = {We propose the stochastic average gradient (SAG) method for optimizing the sum of a finite number of smooth convex functions. Like stochastic gradient (SG) methods, the SAG method's iteration cost is independent of the number of terms in the sum. However, by incorporating a memory of previous gradient values the SAG method achieves a faster convergence rate than black-box SG methods. The convergence rate is improved from O(1/k\^\{1/2\}) to O(1/k) in general, and when the sum is strongly-convex the convergence rate is improved from the sub-linear O(1/k) to a linear convergence rate of the form O(p\^k) for p \textbackslash{}textless\{\} 1. Further, in many cases the convergence rate of the new method is also faster than black-box deterministic gradient methods, in terms of the number of gradient evaluations. Numerical experiments indicate that the new algorithm often dramatically outperforms existing SG and deterministic gradient methods, and that the performance may be further improved through the use of non-uniform sampling strategies.},
+  archivePrefix = {arXiv},
+  eprint = {1309.2388},
+  eprinttype = {arxiv},
+  file = {/Users/sue/Zotero/storage/4F4CU9K9/Schmidt et al. - 2016 - Minimizing Finite Sums with the Stochastic Average.pdf;/Users/sue/Zotero/storage/QKBCVKQP/1309.html},
+  journal = {arXiv:1309.2388 [cs, math, stat]},
+  keywords = {Computer Science - Machine Learning,Mathematics - Optimization and Control,Statistics - Computation,Statistics - Machine Learning},
+  primaryClass = {cs, math, stat}
 }
 
 @article{shamirStochasticGradientDescent,
