--- a/QuantEst/thesis/main.tex
+++ b/QuantEst/thesis/main.tex
@@ -98,7 +98,8 @@
 %----------------------------------------------------------------------------------------
 
 % \include{Chapters/literature_review} % Chapter 1
-\include{Chapters/SAG}
+% \include{Chapters/SAG}
+\include{Chapters/smooth_func}
 % \include{Chapters/SGD}
 % \include{Chapters/algorithm_equivalence}
 % \include{Chapters/Simultaneous_SGD}
