smooth function draft (nearly done)

--- a/QuantEst/thesis/Bibliography.bib
+++ b/QuantEst/thesis/Bibliography.bib
@@ -655,6 +655,16 @@
   number = {SAND2008-6212, 1028931}
 }
 
+@article{ramirezX2MostComputationally2014,
+  title = {X2 + \textmu{} Is the {{Most Computationally Efficient Smooth Approximation}} to |x|: A {{Proof}}},
+  author = {Ramirez, Carlos and Sanchez, Reinaldo and Kreinovich, Vladik and Argaez, Miguel},
+  year = {2014},
+  pages = {6},
+  abstract = {In many practical situations, we need to minimize an expression of the type |ci|. The problem is that most efficient optimization techniques use the derivative of the objective function, but the function |x| is not differentiable at 0. To make optimization efficient, it is therefore reasonable to approximate |x| by a smooth function. We show that{$\surd$}in some reasonable sense, the most computationally efficient smooth approximation to |x| is the function x2 + \textmu, a function which has indeed been successfully used in such optimization.},
+  file = {/Users/sue/Zotero/storage/Q65PYDVY/Ramirez et al. - 2014 - x2 + µ is the Most Computationally Eﬃcient Smooth .pdf},
+  language = {en}
+}
+
 @article{rayArtApproximatingDistributions1800,
   title = {The {{Art}} of {{Approximating Distributions}}: {{Histograms}} and {{Quantiles}} at {{Scale}}},
   author = {Ray, Nelson},
@@ -783,6 +793,21 @@
   journal = {ACM Transactions on Mathematical Software (TOMS)},
   language = {en},
   number = {1}
+}
+
+@article{voroninConvolutionBasedSmooth2015a,
+  title = {Convolution Based Smooth Approximations to the Absolute Value Function with Application to Non-Smooth Regularization},
+  author = {Voronin, Sergey and Ozkaya, Gorkem and Yoshida, Davis},
+  year = {2015},
+  month = jul,
+  abstract = {We present new convolution based smooth approximations to the absolute value function and apply them to construct gradient based algorithms such as the nonlinear conjugate gradient scheme to obtain sparse, regularized solutions of linear systems \$Ax = b\$, a problem often tackled via iterative algorithms which attack the corresponding non-smooth minimization problem directly. In contrast, the approximations we propose allow us to replace the generalized non-smooth sparsity inducing functional by a smooth approximation of which we can readily compute gradients and Hessians. The resulting gradient based algorithms often yield a good estimate for the sought solution in few iterations and can either be used directly or to quickly warm start existing algorithms.},
+  archivePrefix = {arXiv},
+  eprint = {1408.6795},
+  eprinttype = {arxiv},
+  file = {/Users/sue/Zotero/storage/2UMDDFK3/Voronin et al. - 2015 - Convolution based smooth approximations to the abs.pdf;/Users/sue/Zotero/storage/V6EA935T/1408.html},
+  journal = {arXiv:1408.6795 [math]},
+  keywords = {Mathematics - Numerical Analysis},
+  primaryClass = {math}
 }
 
 @inproceedings{wangQuantilesDataStreams2013,
