--- a/QuantEst/sgd_est_experiment/Analysis and plans.ipynb
+++ b/QuantEst/sgd_est_experiment/Analysis and plans.ipynb
@@ -73,7 +73,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Plan for next week\n",
+    "## Things done by 23 April\n",
+    "\n",
+    "1. Explanation of SAG\n",
+    "2. Smooth function for pinball loss\n",
+    "\n",
+    "### Things not done\n",
+    "1. Why P2 doesn't work well\n",
+    "    - the paper I'm based on is different from the original P2 algo, not even sure if it converges\n",
     "\n"
    ]
   },
