Moving plot to a py file (not done yet)

--- a/QuantEst/thesis/main.tex
+++ b/QuantEst/thesis/main.tex
@@ -99,6 +99,7 @@
 
 % \include{Chapters/literature_review} % Chapter 1
 % \include{Chapters/SAG}
+% \include{Chapters/Multi_quant}
 \include{Chapters/smooth_func}
 % \include{Chapters/SGD}
 % \include{Chapters/algorithm_equivalence}
