Plot.py tested, works well for SGD experiments and SGD Stepsize changes

--- a/QuantEst/sgd_est_experiment/Experiment_plots.ipynb
+++ b/QuantEst/sgd_est_experiment/Experiment_plots.ipynb
@@ -424,7 +424,7 @@
     }
    ],
    "source": [
-    "plot_charts(\"Experiment_results/SGD/step_size/\")\n"
+    "# plot_charts(\"Experiment_results/SGD/step_size/\")\n"
    ]
   },
   {
