Data_generation.py draft

--- a/QuantEst/sgd_est_experiment/Experiment_final.ipynb
+++ b/QuantEst/sgd_est_experiment/Experiment_final.ipynb
@@ -42,7 +42,7 @@
     "N_g = 12 # N_generation\n",
     "N_s = 10 # N_shuffle\n",
     "\n",
-    "N_q = len(tau_vals)\n",
+    "# N_q = len(tau_vals)\n",
     "\n",
     "# c_Norm = colors.Normalize(vmin=0, vmax=1)\n",
     "# scalarMap = cmx.ScalarMappable(norm=c_Norm, cmap=plt.get_cmap('cool'))"
@@ -364,7 +364,8 @@
     "def get_q_ests(dataset, step_size, tau_lst):\n",
     "\n",
     "    if len(dataset.shape)>2:\n",
-    "        raise Exception('Dataset for q_est calculation of wrong shape:' + str(dataset.shape)+ ', should be 1d or 2d array')\n",
+    "        raise Exception('Dataset for q_est calculation of wrong shape: {}, should be 1d or 2d array'\n",
+    "                        .format(str(dataset.shape)))\n",
     "    if len(dataset.shape)==1:\n",
     "        procs = get_procs(dataset, step_size, tau_lst)\n",
     "        res = get_res(procs)\n",
@@ -558,13 +559,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "distro\n",
+      "[['mix' '1000' 'const']\n",
+      " ['gau_1' '1000' 'const']\n",
+      " ['gau_2' '1000' 'const']\n",
+      " ['exp' '1000' 'const']]\n",
+      "Experiment_results/SGD/distro/mix_q_true.txt\n",
+      "Experiment_results/SGD/distro/mix_q_batches.txt\n",
+      "Experiment_results/SGD/distro/mix_q_est_res.txt\n",
+      "Experiment_results/SGD/distro/mix_q_est_proc.txt\n",
+      "Experiment_results/SGD/distro/mix_E.txt\n",
+      "Experiment_results/SGD/distro/gau_1_q_true.txt\n",
+      "Experiment_results/SGD/distro/gau_1_q_batches.txt\n",
+      "Experiment_results/SGD/distro/gau_1_q_est_res.txt\n",
+      "Experiment_results/SGD/distro/gau_1_q_est_proc.txt\n",
+      "Experiment_results/SGD/distro/gau_1_E.txt\n",
+      "Experiment_results/SGD/distro/gau_2_q_true.txt\n",
+      "Experiment_results/SGD/distro/gau_2_q_batches.txt\n",
+      "Experiment_results/SGD/distro/gau_2_q_est_res.txt\n",
+      "Experiment_results/SGD/distro/gau_2_q_est_proc.txt\n",
+      "Experiment_results/SGD/distro/gau_2_E.txt\n",
+      "Experiment_results/SGD/distro/exp_q_true.txt\n",
+      "Experiment_results/SGD/distro/exp_q_batches.txt\n",
+      "Experiment_results/SGD/distro/exp_q_est_res.txt\n",
+      "Experiment_results/SGD/distro/exp_q_est_proc.txt\n",
+      "Experiment_results/SGD/distro/exp_E.txt\n",
       "data_size\n",
       "[['gau_2' '100' 'const']\n",
       " ['gau_2' '1000' 'const']\n",
@@ -583,13 +609,33 @@
       "Experiment_results/SGD/data_size/10000_q_batches.txt\n",
       "Experiment_results/SGD/data_size/10000_q_est_res.txt\n",
       "Experiment_results/SGD/data_size/10000_q_est_proc.txt\n",
-      "Experiment_results/SGD/data_size/10000_E.txt\n"
+      "Experiment_results/SGD/data_size/10000_E.txt\n",
+      "step_size\n",
+      "[['gau_1' '1000' 'const']\n",
+      " ['gau_1' '1000' '2_div_sqrt_k']\n",
+      " ['gau_1' '1000' '0.002_div_sqrt_k']]\n",
+      "Experiment_results/SGD/step_size/const_q_true.txt\n",
+      "Experiment_results/SGD/step_size/const_q_batches.txt\n",
+      "Experiment_results/SGD/step_size/const_q_est_res.txt\n",
+      "Experiment_results/SGD/step_size/const_q_est_proc.txt\n",
+      "Experiment_results/SGD/step_size/const_E.txt\n",
+      "Experiment_results/SGD/step_size/2_div_sqrt_k_q_true.txt\n",
+      "Experiment_results/SGD/step_size/2_div_sqrt_k_q_batches.txt\n",
+      "Experiment_results/SGD/step_size/2_div_sqrt_k_q_est_res.txt\n",
+      "Experiment_results/SGD/step_size/2_div_sqrt_k_q_est_proc.txt\n",
+      "Experiment_results/SGD/step_size/2_div_sqrt_k_E.txt\n",
+      "Experiment_results/SGD/step_size/0.002_div_sqrt_k_q_true.txt\n",
+      "Experiment_results/SGD/step_size/0.002_div_sqrt_k_q_batches.txt\n",
+      "Experiment_results/SGD/step_size/0.002_div_sqrt_k_q_est_res.txt\n",
+      "Experiment_results/SGD/step_size/0.002_div_sqrt_k_q_est_proc.txt\n",
+      "Experiment_results/SGD/step_size/0.002_div_sqrt_k_E.txt\n",
+      "data_sequance\n"
      ]
     }
    ],
    "source": [
     "# Run all functions\n",
-    "all_sgd_comparisons([\"data_size\"])"
+    "all_sgd_comparisons(sgd_lst)"
    ]
   },
   {
@@ -641,6 +687,51 @@
     "\n",
     "Same happens when $x - q_k < 0$\n",
     "-->"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Experiment_results/SGD/step_size/const_\n",
+      "Experiment_results/SGD/step_size/2_div_sqrt_k_\n",
+      "Experiment_results/SGD/step_size/0.002_div_sqrt_k_\n",
+      "Experiment_results/SGD/distro/gau_1_\n",
+      "Experiment_results/SGD/distro/mix_\n",
+      "Experiment_results/SGD/distro/gau_2_\n",
+      "Experiment_results/SGD/distro/exp_\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/sue/anaconda3/lib/python3.6/site-packages/matplotlib/pyplot.py:528: RuntimeWarning: More than 20 figures have been opened. Figures created through the pyplot interface (`matplotlib.pyplot.figure`) are retained until explicitly closed and may consume too much memory. (To control this warning, see the rcParam `figure.max_open_warning`).\n",
+      "  max_open_warning, RuntimeWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Experiment_results/SGD/data_size/100_\n",
+      "Experiment_results/SGD/data_size/2000_\n",
+      "Experiment_results/SGD/data_size/10000_\n",
+      "Experiment_results/SGD/data_size/1000_\n",
+      "Experiment_results/SGD/data_size/100000_\n",
+      "Experiment_results/SGD/data_sequence/True_\n"
+     ]
+    }
+   ],
+   "source": [
+    "from Plot import plot_charts\n",
+    "\n",
+    "plot_charts(\"Experiment_results/SGD/\")"
    ]
   },
   {
