--- a/QuantEst/sgd_est_experiment/Experiment_final.ipynb
+++ b/QuantEst/sgd_est_experiment/Experiment_final.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,15 +23,13 @@
     "\n",
     "import math\n",
     "import numpy as np\n",
-    "# import matplotlib.pyplot as plt\n",
-    "# import matplotlib.colors as colors\n",
-    "# import matplotlib.cm as cmx\n",
-    "import os"
+    "import os\n",
+    "from Distro_generation import get_dataset, get_q_batches, get_q_true"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,129 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_one_dt(distro, datasize):\n",
-    "#     return np.ones(size)\n",
-    "    if distro == 'gau_1':\n",
-    "        return np.random.normal(2, 18, datasize)\n",
-    "    elif distro == 'gau_2':\n",
-    "        return np.random.normal(0, 0.001, datasize)\n",
-    "    elif distro == 'mix':\n",
-    "        # mean: -1.3\n",
-    "        # std: 30.779035604224564\n",
-    "        # var: 947.3490327261234\n",
-    "        mix_lst = np.zeros(datasize)\n",
-    "        sizes = np.array([0.3, 0.2, 0.1, 0.15, 0.25])\n",
-    "        mixtures = [(2,7), (0,0.7), (36, 26), (5,77), (-77,7)]\n",
-    "        acc_sizes = [sum(sizes[:i+1]) for i in range(len(sizes))]\n",
-    "\n",
-    "        for d_idx in range(datasize):\n",
-    "            rdn = np.random.uniform(0,1)\n",
-    "            mix_id = 0\n",
-    "            for m_id in acc_sizes:\n",
-    "                if rdn > m_id:\n",
-    "                    mix_id += 1\n",
-    "                else:break\n",
-    "            data_point = np.random.normal(mixtures[mix_id][0], mixtures[mix_id][1])\n",
-    "            mix_lst[d_idx] = data_point\n",
-    "        return mix_lst\n",
-    "    elif distro == 'exp':\n",
-    "        return np.random.exponential(scale=1, size=datasize)*6.5 - 20\n",
-    "    else: raise Exception(\"distribution doesn't work!\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_dataset(distro, datasize, g_test=False):\n",
-    "    if g_test:\n",
-    "        dataset = np.zeros((N_g, datasize))\n",
-    "        for i in range(N_g):\n",
-    "            dataset[i] = get_one_dt(distro, datasize)\n",
-    "    else:\n",
-    "        dataset = get_one_dt(distro, datasize)\n",
-    "    return dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_q_true(distro, tau_lst):\n",
-    "    if tau_lst == tau_vals:\n",
-    "        if distro=='gau_1':\n",
-    "            return np.asarray([-21.06792817980280840537, \n",
-    "                              -7.43920922874473411269,\n",
-    "                              2,\n",
-    "                              25.06792817980280840537,\n",
-    "                              43.87426173273513981594])\n",
-    "        elif distro=='gau_2':\n",
-    "            return np.asarray([-0.001281551565544600466965,\n",
-    "                              -5.244005127080407840383E-4,\n",
-    "                              0,\n",
-    "                              0.001281551565544600466965,\n",
-    "                              0.002326347874040841100886])\n",
-    "        elif distro=='mix':\n",
-    "            # sampled from 100000000 datapoints\n",
-    "            return np.asarray([-80.28496182,\n",
-    "                               -29.02324254,\n",
-    "                               -0.36011575,\n",
-    "                               36.69268923,\n",
-    "                               120.7676231])\n",
-    "        elif distro=='exp':\n",
-    "            return np.asarray([0.1053605156578263012275,\n",
-    "                              0.3566749439387323789126,\n",
-    "                              0.6931471805599453094172,\n",
-    "                              2.302585092994045684018,\n",
-    "                              4.605170185988091368036])*6.5 - 20\n",
-    "    raise Exception('tau_lst should be tau_vals')\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_q_batch(dataset, tau_lst):\n",
-    "    if len(dataset.shape) != 1:\n",
-    "        raise Exception('Dataset for q_batch calculation of wrong shape: ' + str(dataset.shape))\n",
-    "        \n",
-    "    q_batch = np.zeros(len(tau_lst))\n",
-    "    for i, tau in enumerate(tau_lst):\n",
-    "        q_batch[i] = np.percentile(dataset, tau*100)\n",
-    "    return q_batch"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_q_batches(dataset, tau_lst):\n",
-    "    # g_test = False\n",
-    "    if len(dataset.shape) == 1: \n",
-    "        return get_q_batch(dataset, tau_lst)\n",
-    "    else:\n",
-    "        q_batches = np.zeros((dataset.shape[0], len(tau_lst)))\n",
-    "        for i in range(q_batches.shape[0]):\n",
-    "            q_batches[i] = get_q_batch(dataset[i], tau_lst)\n",
-    "    return q_batches"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -691,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -704,21 +580,7 @@
       "Experiment_results/SGD/distro/gau_1_\n",
       "Experiment_results/SGD/distro/mix_\n",
       "Experiment_results/SGD/distro/gau_2_\n",
-      "Experiment_results/SGD/distro/exp_\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/sue/anaconda3/lib/python3.6/site-packages/matplotlib/pyplot.py:528: RuntimeWarning: More than 20 figures have been opened. Figures created through the pyplot interface (`matplotlib.pyplot.figure`) are retained until explicitly closed and may consume too much memory. (To control this warning, see the rcParam `figure.max_open_warning`).\n",
-      "  max_open_warning, RuntimeWarning)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Experiment_results/SGD/distro/exp_\n",
       "Experiment_results/SGD/data_size/100_\n",
       "Experiment_results/SGD/data_size/2000_\n",
       "Experiment_results/SGD/data_size/10000_\n",
