--- a/QuantEst/sgd_est_experiment/Experiment_final_change_stepsize.ipynb
+++ b/QuantEst/sgd_est_experiment/Experiment_final_change_stepsize.ipynb
@@ -9,31 +9,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %matplotlib inline\n",
-    "\n",
-    "# import io, os, sys, types\n",
-    "# from IPython import get_ipython\n",
-    "# from nbformat import read\n",
-    "# from IPython.core.interactiveshell import InteractiveShell\n",
-    "\n",
-    "\n",
     "import math\n",
     "import numpy as np\n",
     "import pathlib\n",
-    "\n",
-    "# import matplotlib.pyplot as plt\n",
-    "# import matplotlib.colors as colors\n",
-    "# import matplotlib.cm as cmx\n",
-    "import os"
+    "import os\n",
+    "from Distro_generation import get_dataset, get_q_batches, get_q_true"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,140 +76,15 @@
     "        setting_lst.append(lst)\n",
     "        \n",
     "    changed_setting = None\n",
-    "    if len(distro_lst)>1:\n",
-    "        changed_setting = 'distro'\n",
-    "    elif len(datasize_lst)>1:\n",
-    "        changed_setting = 'data_size'\n",
-    "    elif len(stepsize_lst)>1:\n",
-    "        changed_setting = 'step_size'\n",
+    "    change_lst = ['distro', 'data_size', 'step_size']\n",
+    "    for idx, l in enumerate(len_lst):\n",
+    "        if l>1: changed_setting = change_lst[idx]\n",
     "    return np.asarray(setting_lst).T, changed_setting\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_one_dt(distro, datasize):\n",
-    "#     return np.ones(size)\n",
-    "    if distro == 'gau_1':\n",
-    "        return np.random.normal(2, 18, datasize)\n",
-    "    elif distro == 'gau_2':\n",
-    "        return np.random.normal(0, 0.001, datasize)\n",
-    "    elif distro == 'mix':\n",
-    "        # mean: -1.3\n",
-    "        # std: 30.779035604224564\n",
-    "        # var: 947.3490327261234\n",
-    "        mix_lst = np.zeros(datasize)\n",
-    "        sizes = np.array([0.3, 0.2, 0.1, 0.15, 0.25])\n",
-    "        mixtures = [(2,7), (0,0.7), (36, 26), (5,77), (-77,7)]\n",
-    "        acc_sizes = [sum(sizes[:i+1]) for i in range(len(sizes))]\n",
-    "\n",
-    "        for d_idx in range(datasize):\n",
-    "            rdn = np.random.uniform(0,1)\n",
-    "            mix_id = 0\n",
-    "            for m_id in acc_sizes:\n",
-    "                if rdn > m_id:\n",
-    "                    mix_id += 1\n",
-    "                else:break\n",
-    "            data_point = np.random.normal(mixtures[mix_id][0], mixtures[mix_id][1])\n",
-    "            mix_lst[d_idx] = data_point\n",
-    "        return mix_lst\n",
-    "    elif distro == 'exp':\n",
-    "        return np.random.exponential(scale=1, size=datasize)*6.5 - 20\n",
-    "    else: raise Exception(\"distribution doesn't work!\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_dataset(distro, datasize, g_test=False):\n",
-    "    if g_test:\n",
-    "        dataset = np.zeros((N_g, datasize))\n",
-    "        for i in range(N_g):\n",
-    "            dataset[i] = get_one_dt(distro, datasize)\n",
-    "    else:\n",
-    "        dataset = get_one_dt(distro, datasize)\n",
-    "    return dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_q_true(distro, tau_lst):\n",
-    "    if tau_lst == tau_vals:\n",
-    "        if distro=='gau_1':\n",
-    "            return np.asarray([-21.06792817980280840537, \n",
-    "                              -7.43920922874473411269,\n",
-    "                              2,\n",
-    "                              25.06792817980280840537,\n",
-    "                              43.87426173273513981594])\n",
-    "        elif distro=='gau_2':\n",
-    "            return np.asarray([-0.001281551565544600466965,\n",
-    "                              -5.244005127080407840383E-4,\n",
-    "                              0,\n",
-    "                              0.001281551565544600466965,\n",
-    "                              0.002326347874040841100886])\n",
-    "        elif distro=='mix':\n",
-    "            # sampled from 100000000 datapoints\n",
-    "            return np.asarray([-80.28496182,\n",
-    "                               -29.02324254,\n",
-    "                               -0.36011575,\n",
-    "                               36.69268923,\n",
-    "                               120.7676231])\n",
-    "        elif distro=='exp':\n",
-    "            return np.asarray([0.1053605156578263012275,\n",
-    "                              0.3566749439387323789126,\n",
-    "                              0.6931471805599453094172,\n",
-    "                              2.302585092994045684018,\n",
-    "                              4.605170185988091368036])*6.5 - 20\n",
-    "    raise Exception('tau_lst should be tau_vals')\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_q_batch(dataset, tau_lst):\n",
-    "    if len(dataset.shape) != 1:\n",
-    "        raise Exception('Dataset for q_batch calculation of wrong shape: ' + str(dataset.shape))\n",
-    "        \n",
-    "    q_batch = np.zeros(len(tau_lst))\n",
-    "    for i, tau in enumerate(tau_lst):\n",
-    "        q_batch[i] = np.percentile(dataset, tau*100)\n",
-    "    return q_batch"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_q_batches(dataset, tau_lst):\n",
-    "    # g_test = False\n",
-    "    if len(dataset.shape) == 1: \n",
-    "        return get_q_batch(dataset, tau_lst)\n",
-    "    else:\n",
-    "        q_batches = np.zeros((dataset.shape[0], len(tau_lst)))\n",
-    "        for i in range(q_batches.shape[0]):\n",
-    "            q_batches[i] = get_q_batch(dataset[i], tau_lst)\n",
-    "    return q_batches"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +235,7 @@
     "# write_data_overview('ca', 'se', tau_vals, \"try.txt\")\n",
     "    \n",
     "def save_data(foldername, file_name, tau_lst, data_dict):\n",
-    "    print (\"save data folder name\", foldername)\n",
+    "    print (\"save data in folder\", foldername)\n",
     "    pathlib.Path(foldername).mkdir(parents=True, exist_ok=True) \n",
     "    category, setting = file_name[0], file_name[1]    \n",
     "    write_data_overview(category, setting, tau_lst, foldername+str(setting)+\"_\"+\"overview.txt\")\n",
@@ -395,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +278,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_shuffled_dataset(dataset, datasize, s_test):\n",
+    "    if not s_test: return dataset\n",
+    "    \n",
+    "    shuffled_dt = np.zeros((N_s, datasize))\n",
+    "    for i in range(N_s):\n",
+    "        np.random.shuffle(dataset)\n",
+    "        shuffled_dt[i] = dataset\n",
+    "    dataset = shuffled_dt\n",
+    "            \n",
+    "    return dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,9 +309,10 @@
     "    # generate different settings\n",
     "    setting_lst, changed_setting = get_settings(distro_lst, datasize_lst, stepsize_lst,)\n",
     "    print (setting_lst)\n",
+    "    \n",
     "    # if only stepsize changes, generate dataset and q_batches\n",
     "    dataset, q_batches = 0, 0\n",
-    "    if changed_setting=='step_size':\n",
+    "    if len(distro_lst)==1 and len(datasize_lst)==1:\n",
     "        dataset = get_dataset(distro_lst[0], datasize_lst[0], g_test)\n",
     "        q_batches = get_q_batches(dataset, tau_lst)\n",
     "        \n",
@@ -439,15 +322,11 @@
     "        # generate all the data\n",
     "        distro, datasize, stepsize = setting[0], int(setting[1]), setting[2]\n",
     "        q_true = get_q_true(distro, tau_lst)\n",
-    "        if changed_setting != 'step_size':\n",
+    "        if len(distro_lst)!=1 or len(datasize_lst)!=1:\n",
     "            dataset = get_dataset(distro, datasize, g_test)\n",
     "            q_batches = get_q_batches(dataset, tau_lst)\n",
-    "        if s_test:\n",
-    "            shuffled_dt = np.zeros((N_s, datasize))\n",
-    "            for i in range(N_s):\n",
-    "                np.random.shuffle(dataset)\n",
-    "                shuffled_dt[i] = dataset\n",
-    "            dataset = shuffled_dt\n",
+    "        if not s_test: \n",
+    "            dataset = get_shuffled_dataset(dataset, datasize, s_test)\n",
     "        q_est_res, q_est_proc = get_q_ests(dataset, stepsize, tau_lst)\n",
     "        E = get_normalized_e(q_true, q_batches, q_est_res)\n",
     "        \n",
@@ -466,16 +345,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sgd_lst = ['data_size']        \n",
+    "sgd_lst = ['data_size', 'distro', ]        \n",
     "\n",
-    "def all_sgd_comparisons(sgd_lst):\n",
+    "def all_sgd_comparisons(sgd_lst, root_folder='SGD'):\n",
     "    for t in sgd_lst:\n",
     "        print (t)\n",
-    "        folder_name = \"Experiment_results/Adaptive_stepsize/\"+t+\"/\"\n",
+    "        folder_name = \"Experiment_results/{}/{}/\".format(root_folder, t)\n",
     "        if t=='distro':\n",
     "            quantile_sgd_compare(folder_name, distros, [1000], ['const'], True)\n",
     "        elif t=='data_size':\n",
@@ -489,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -499,18 +378,47 @@
       "data_size\n",
       "[['gau_2' '1000' 'const']\n",
       " ['gau_2' '10000' 'const']]\n",
-      "save data folder name Experiment_results/Adaptive_stepsize/data_size/\n",
-      "Experiment_results/Adaptive_stepsize/data_size/1000_q_true.txt\n",
-      "Experiment_results/Adaptive_stepsize/data_size/1000_q_batches.txt\n",
-      "Experiment_results/Adaptive_stepsize/data_size/1000_q_est_res.txt\n",
-      "Experiment_results/Adaptive_stepsize/data_size/1000_q_est_proc.txt\n",
-      "Experiment_results/Adaptive_stepsize/data_size/1000_E.txt\n",
-      "save data folder name Experiment_results/Adaptive_stepsize/data_size/\n",
-      "Experiment_results/Adaptive_stepsize/data_size/10000_q_true.txt\n",
-      "Experiment_results/Adaptive_stepsize/data_size/10000_q_batches.txt\n",
-      "Experiment_results/Adaptive_stepsize/data_size/10000_q_est_res.txt\n",
-      "Experiment_results/Adaptive_stepsize/data_size/10000_q_est_proc.txt\n",
-      "Experiment_results/Adaptive_stepsize/data_size/10000_E.txt\n"
+      "save data folder name Experiment_results/SGD/data_size/\n",
+      "Experiment_results/SGD/data_size/1000_q_true.txt\n",
+      "Experiment_results/SGD/data_size/1000_q_batches.txt\n",
+      "Experiment_results/SGD/data_size/1000_q_est_res.txt\n",
+      "Experiment_results/SGD/data_size/1000_q_est_proc.txt\n",
+      "Experiment_results/SGD/data_size/1000_E.txt\n",
+      "save data folder name Experiment_results/SGD/data_size/\n",
+      "Experiment_results/SGD/data_size/10000_q_true.txt\n",
+      "Experiment_results/SGD/data_size/10000_q_batches.txt\n",
+      "Experiment_results/SGD/data_size/10000_q_est_res.txt\n",
+      "Experiment_results/SGD/data_size/10000_q_est_proc.txt\n",
+      "Experiment_results/SGD/data_size/10000_E.txt\n",
+      "distro\n",
+      "[['mix' '1000' 'const']\n",
+      " ['gau_1' '1000' 'const']\n",
+      " ['gau_2' '1000' 'const']\n",
+      " ['exp' '1000' 'const']]\n",
+      "save data folder name Experiment_results/SGD/distro/\n",
+      "Experiment_results/SGD/distro/mix_q_true.txt\n",
+      "Experiment_results/SGD/distro/mix_q_batches.txt\n",
+      "Experiment_results/SGD/distro/mix_q_est_res.txt\n",
+      "Experiment_results/SGD/distro/mix_q_est_proc.txt\n",
+      "Experiment_results/SGD/distro/mix_E.txt\n",
+      "save data folder name Experiment_results/SGD/distro/\n",
+      "Experiment_results/SGD/distro/gau_1_q_true.txt\n",
+      "Experiment_results/SGD/distro/gau_1_q_batches.txt\n",
+      "Experiment_results/SGD/distro/gau_1_q_est_res.txt\n",
+      "Experiment_results/SGD/distro/gau_1_q_est_proc.txt\n",
+      "Experiment_results/SGD/distro/gau_1_E.txt\n",
+      "save data folder name Experiment_results/SGD/distro/\n",
+      "Experiment_results/SGD/distro/gau_2_q_true.txt\n",
+      "Experiment_results/SGD/distro/gau_2_q_batches.txt\n",
+      "Experiment_results/SGD/distro/gau_2_q_est_res.txt\n",
+      "Experiment_results/SGD/distro/gau_2_q_est_proc.txt\n",
+      "Experiment_results/SGD/distro/gau_2_E.txt\n",
+      "save data folder name Experiment_results/SGD/distro/\n",
+      "Experiment_results/SGD/distro/exp_q_true.txt\n",
+      "Experiment_results/SGD/distro/exp_q_batches.txt\n",
+      "Experiment_results/SGD/distro/exp_q_est_res.txt\n",
+      "Experiment_results/SGD/distro/exp_q_est_proc.txt\n",
+      "Experiment_results/SGD/distro/exp_E.txt\n"
      ]
     }
    ],
@@ -568,6 +476,36 @@
     "\n",
     "Same happens when $x - q_k < 0$\n",
     "-->"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Experiment_results/SGD/step_size/const_\n",
+      "Experiment_results/SGD/step_size/2_div_sqrt_k_\n",
+      "Experiment_results/SGD/step_size/0.002_div_sqrt_k_\n",
+      "Experiment_results/SGD/distro/gau_1_\n",
+      "Experiment_results/SGD/distro/mix_\n",
+      "Experiment_results/SGD/distro/gau_2_\n",
+      "Experiment_results/SGD/distro/exp_\n",
+      "Experiment_results/SGD/data_size/100_\n",
+      "Experiment_results/SGD/data_size/2000_\n",
+      "Experiment_results/SGD/data_size/10000_\n",
+      "Experiment_results/SGD/data_size/1000_\n",
+      "Experiment_results/SGD/data_size/100000_\n",
+      "Experiment_results/SGD/data_sequence/True_\n"
+     ]
+    }
+   ],
+   "source": [
+    "from Plot import plot_charts\n",
+    "plot_charts(\"Experiment_results/SGD/\")"
    ]
   },
   {
