Experiment_final_change_stepsize modified, will be merged into the main one soonish

--- a/QuantEst/sgd_est_experiment/Experiment_final_change_stepsize.ipynb
+++ b/QuantEst/sgd_est_experiment/Experiment_final_change_stepsize.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,18 +22,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "distros = ['mix', 'gau_1', 'gau_2', 'exp']\n",
-    "stepsizes = ['const', '2_div_sqrt_k', '0.002_div_sqrt_k']\n",
     "\n",
-    "tau_vals = [0.1, 0.3, 0.5, 0.9, 0.99]\n",
-    "N_g = 12 # N_generation\n",
-    "N_s = 10 # N_shuffle\n",
-    "\n",
-    "N_q = len(tau_vals)\n",
     "\n",
     "# c_Norm = colors.Normalize(vmin=0, vmax=1)\n",
     "# scalarMap = cmx.ScalarMappable(norm=c_Norm, cmap=plt.get_cmap('cool'))"
@@ -60,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,12 +93,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_procs(dataset, step_size, tau_lst):\n",
-    "    update_size = 200\n",
+    "def get_procs(dataset, step_size, tau_lst, update_size = 200):\n",
+    "    if update_size*5 > dataset.shape[0]:\n",
+    "        print (\"Warning!\",\n",
+    "            \"Cannot do the step size trick because the dataset of size {} is too small for the update size {}\"\n",
+    "            .format(dataset.shape[0], update_size))\n",
     "    proc = np.zeros((dataset.shape[0], len(tau_lst)))\n",
     "    q_pre, q_arr = np.zeros(len(tau_lst)), np.zeros(len(tau_lst))\n",
     "    alpha_adaptation = np.ones(len(tau_lst))\n",
@@ -160,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +292,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "distros = ['mix', 'gau_1', 'gau_2', 'exp']\n",
+    "stepsizes = ['const', '2_div_sqrt_k', '0.002_div_sqrt_k']\n",
+    "tau_vals = [0.1, 0.3, 0.5, 0.9, 0.99]\n",
+    "N_g = 12 # N_generation\n",
+    "N_s = 10 # N_shuffle\n",
+    "\n",
+    "N_q = len(tau_vals)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,20 +356,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sgd_lst = ['data_size', 'distro', ]        \n",
+    "adaptive_lst = ['data_size',]        \n",
     "\n",
-    "def all_sgd_comparisons(sgd_lst, root_folder='SGD'):\n",
+    "def all_sgd_comparisons(sgd_lst, root_folder='Adaptive_stepsize'):\n",
     "    for t in sgd_lst:\n",
     "        print (t)\n",
     "        folder_name = \"Experiment_results/{}/{}/\".format(root_folder, t)\n",
     "        if t=='distro':\n",
     "            quantile_sgd_compare(folder_name, distros, [1000], ['const'], True)\n",
     "        elif t=='data_size':\n",
-    "            quantile_sgd_compare(folder_name, ['gau_2'], [1000, 10000], ['const'], True)\n",
+    "            quantile_sgd_compare(folder_name, ['gau_2'], [100, 1000, 10000], ['const'], True)\n",
     "        elif t=='step_size':\n",
     "            quantile_sgd_compare(folder_name, ['gau_1'], [1000], stepsizes, True)\n",
     "        elif t=='data_sequence':\n",
@@ -368,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -376,60 +387,51 @@
      "output_type": "stream",
      "text": [
       "data_size\n",
-      "[['gau_2' '1000' 'const']\n",
-      " ['gau_2' '10000' 'const']]\n",
-      "save data folder name Experiment_results/SGD/data_size/\n",
-      "Experiment_results/SGD/data_size/1000_q_true.txt\n",
-      "Experiment_results/SGD/data_size/1000_q_batches.txt\n",
-      "Experiment_results/SGD/data_size/1000_q_est_res.txt\n",
-      "Experiment_results/SGD/data_size/1000_q_est_proc.txt\n",
-      "Experiment_results/SGD/data_size/1000_E.txt\n",
-      "save data folder name Experiment_results/SGD/data_size/\n",
-      "Experiment_results/SGD/data_size/10000_q_true.txt\n",
-      "Experiment_results/SGD/data_size/10000_q_batches.txt\n",
-      "Experiment_results/SGD/data_size/10000_q_est_res.txt\n",
-      "Experiment_results/SGD/data_size/10000_q_est_proc.txt\n",
-      "Experiment_results/SGD/data_size/10000_E.txt\n",
-      "distro\n",
-      "[['mix' '1000' 'const']\n",
-      " ['gau_1' '1000' 'const']\n",
+      "[['gau_2' '100' 'const']\n",
       " ['gau_2' '1000' 'const']\n",
-      " ['exp' '1000' 'const']]\n",
-      "save data folder name Experiment_results/SGD/distro/\n",
-      "Experiment_results/SGD/distro/mix_q_true.txt\n",
-      "Experiment_results/SGD/distro/mix_q_batches.txt\n",
-      "Experiment_results/SGD/distro/mix_q_est_res.txt\n",
-      "Experiment_results/SGD/distro/mix_q_est_proc.txt\n",
-      "Experiment_results/SGD/distro/mix_E.txt\n",
-      "save data folder name Experiment_results/SGD/distro/\n",
-      "Experiment_results/SGD/distro/gau_1_q_true.txt\n",
-      "Experiment_results/SGD/distro/gau_1_q_batches.txt\n",
-      "Experiment_results/SGD/distro/gau_1_q_est_res.txt\n",
-      "Experiment_results/SGD/distro/gau_1_q_est_proc.txt\n",
-      "Experiment_results/SGD/distro/gau_1_E.txt\n",
-      "save data folder name Experiment_results/SGD/distro/\n",
-      "Experiment_results/SGD/distro/gau_2_q_true.txt\n",
-      "Experiment_results/SGD/distro/gau_2_q_batches.txt\n",
-      "Experiment_results/SGD/distro/gau_2_q_est_res.txt\n",
-      "Experiment_results/SGD/distro/gau_2_q_est_proc.txt\n",
-      "Experiment_results/SGD/distro/gau_2_E.txt\n",
-      "save data folder name Experiment_results/SGD/distro/\n",
-      "Experiment_results/SGD/distro/exp_q_true.txt\n",
-      "Experiment_results/SGD/distro/exp_q_batches.txt\n",
-      "Experiment_results/SGD/distro/exp_q_est_res.txt\n",
-      "Experiment_results/SGD/distro/exp_q_est_proc.txt\n",
-      "Experiment_results/SGD/distro/exp_E.txt\n"
+      " ['gau_2' '10000' 'const']]\n",
+      "Warning! Cannot do the step size trick because the dataset of size 100 is too small for the update size 200\n",
+      "Warning! Cannot do the step size trick because the dataset of size 100 is too small for the update size 200\n",
+      "Warning! Cannot do the step size trick because the dataset of size 100 is too small for the update size 200\n",
+      "Warning! Cannot do the step size trick because the dataset of size 100 is too small for the update size 200\n",
+      "Warning! Cannot do the step size trick because the dataset of size 100 is too small for the update size 200\n",
+      "Warning! Cannot do the step size trick because the dataset of size 100 is too small for the update size 200\n",
+      "Warning! Cannot do the step size trick because the dataset of size 100 is too small for the update size 200\n",
+      "Warning! Cannot do the step size trick because the dataset of size 100 is too small for the update size 200\n",
+      "Warning! Cannot do the step size trick because the dataset of size 100 is too small for the update size 200\n",
+      "Warning! Cannot do the step size trick because the dataset of size 100 is too small for the update size 200\n",
+      "Warning! Cannot do the step size trick because the dataset of size 100 is too small for the update size 200\n",
+      "Warning! Cannot do the step size trick because the dataset of size 100 is too small for the update size 200\n",
+      "save data in folder Experiment_results/Adaptive_stepsize/data_size/\n",
+      "Experiment_results/Adaptive_stepsize/data_size/100_q_true.txt\n",
+      "Experiment_results/Adaptive_stepsize/data_size/100_q_batches.txt\n",
+      "Experiment_results/Adaptive_stepsize/data_size/100_q_est_res.txt\n",
+      "Experiment_results/Adaptive_stepsize/data_size/100_q_est_proc.txt\n",
+      "Experiment_results/Adaptive_stepsize/data_size/100_E.txt\n",
+      "save data in folder Experiment_results/Adaptive_stepsize/data_size/\n",
+      "Experiment_results/Adaptive_stepsize/data_size/1000_q_true.txt\n",
+      "Experiment_results/Adaptive_stepsize/data_size/1000_q_batches.txt\n",
+      "Experiment_results/Adaptive_stepsize/data_size/1000_q_est_res.txt\n",
+      "Experiment_results/Adaptive_stepsize/data_size/1000_q_est_proc.txt\n",
+      "Experiment_results/Adaptive_stepsize/data_size/1000_E.txt\n",
+      "save data in folder Experiment_results/Adaptive_stepsize/data_size/\n",
+      "Experiment_results/Adaptive_stepsize/data_size/10000_q_true.txt\n",
+      "Experiment_results/Adaptive_stepsize/data_size/10000_q_batches.txt\n",
+      "Experiment_results/Adaptive_stepsize/data_size/10000_q_est_res.txt\n",
+      "Experiment_results/Adaptive_stepsize/data_size/10000_q_est_proc.txt\n",
+      "Experiment_results/Adaptive_stepsize/data_size/10000_E.txt\n"
      ]
     }
    ],
    "source": [
     "# Run all functions\n",
-    "all_sgd_comparisons(sgd_lst)"
+    "main_folder = 'Adaptive_stepsize'\n",
+    "all_sgd_comparisons(adaptive_lst, main_folder)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,32 +482,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Experiment_results/SGD/step_size/const_\n",
-      "Experiment_results/SGD/step_size/2_div_sqrt_k_\n",
-      "Experiment_results/SGD/step_size/0.002_div_sqrt_k_\n",
-      "Experiment_results/SGD/distro/gau_1_\n",
-      "Experiment_results/SGD/distro/mix_\n",
-      "Experiment_results/SGD/distro/gau_2_\n",
-      "Experiment_results/SGD/distro/exp_\n",
-      "Experiment_results/SGD/data_size/100_\n",
-      "Experiment_results/SGD/data_size/2000_\n",
-      "Experiment_results/SGD/data_size/10000_\n",
-      "Experiment_results/SGD/data_size/1000_\n",
-      "Experiment_results/SGD/data_size/100000_\n",
-      "Experiment_results/SGD/data_sequence/True_\n"
+      "Experiment_results/Adaptive_stepsize/distro/gau_1_\n",
+      "Experiment_results/Adaptive_stepsize/distro/mix_\n",
+      "Experiment_results/Adaptive_stepsize/distro/gau_2_\n",
+      "Experiment_results/Adaptive_stepsize/distro/exp_\n",
+      "Experiment_results/Adaptive_stepsize/data_size/100_\n",
+      "Experiment_results/Adaptive_stepsize/data_size/10000_\n",
+      "Experiment_results/Adaptive_stepsize/data_size/1000_\n"
      ]
     }
    ],
    "source": [
     "from Plot import plot_charts\n",
-    "plot_charts(\"Experiment_results/SGD/\")"
+    "plot_charts(\"Experiment_results/{}/\".format(main_folder))"
    ]
   },
   {
